--- a/vLLM/Dockerfile.vllm
+++ b/vLLM/Dockerfile.vllm
@@ -5,6 +5,8 @@ WORKDIR /app
 
 # 安装常规依赖（transformers 为 tokenizer 使用）
 COPY . /app/
+RUN apt update && apt install -y build-essential
+
 RUN pip install --no-cache-dir -r requirements.txt -i https://pypi.tuna.tsinghua.edu.cn/simple
 
 # 安装 vLLM（含 triton）
